--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -28,5 +28,61 @@
 }
 
 .home {
+  max-width: 500px;
+  flex-direction: column;
   margin: 0 auto;
+  background-color: #efef;
+
+  .story {
+    display: flex;
+    width: 100%;
+    overflow-x: hidden;
+    margin: 48px 0 48px 0;
+    text-align: center;
+    align-items: center;
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-right: 16px;
+    }
+
+    &-pp {
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      background-color: #ccc;
+      object-fit: cover;
+    }
+  }
+
+  .post {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 800px;
+
+    &-image {
+      width: 100%;
+      height: 360px;
+      margin-bottom: 30px;
+    }
+
+    &-user {
+      display: flex;
+      align-items: center;
+      margin-bottom: 14px;
+    }
+
+    &-pp {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #ccc;
+      margin-right: 16px;
+      object-fit: cover;
+    }
+  }
 }
