--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Instagram+Sans&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Instagram Sans", sans-serif;
 }
 
 .layout {
@@ -40,6 +43,7 @@
     margin: 48px 0 48px 0;
     text-align: center;
     align-items: center;
+    -webkit-overflow-scrolling: touch;
 
     &-item {
       display: flex;
