--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -8,27 +8,24 @@
 
 .layout {
   display: flex;
+  flex-direction: column;
 }
 
 .sidebar {
   position: sticky;
   top: 0;
-  width: fit-content;
-  padding: 30px;
-  width: 184px;
-  height: 100vh;
-  border-right: 1px solid #ccc;
+  padding: 8px;
+  width: 100%;
+  height: fit-content;
+  background-color: aqua;
+  border-bottom: 1px solid #ccc;
 
   &-logo-instagram {
     width: 103px;
-    margin-bottom: 30px;
   }
 
   & ul {
-    display: flex;
-    flex-direction: column;
-    margin-top: 48px;
-    gap: 20px;
+    display: none;
   }
 
   & li {
@@ -39,24 +36,22 @@
 .home {
   display: flex;
   width: 100%;
-  gap: 24px;
-  max-width: 800px;
-  justify-content: center;
-  margin: 0 auto;
 
   &-container {
+    display: flex;
     flex-direction: column;
-    background-color: #efef;
+    width: 100%;
   }
 
   .story {
     display: flex;
     width: 100%;
     overflow-x: hidden;
-    margin: 48px 0 48px 0;
+    padding: 16px 0 16px 0;
     text-align: center;
     align-items: center;
-    -webkit-overflow-scrolling: touch;
+    background-color: #fafafa;
+    border-bottom: 1px solid #ccc;
 
     &-item {
       display: flex;
@@ -80,16 +75,21 @@
   }
 
   .post {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    margin-bottom: 36px;
     width: 100%;
-    max-width: 800px;
+    background-color: aquamarine;
+
+    &-container {
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
+      margin-bottom: 36px;
+      width: 100%;
+      max-width: 500px;
+      background-color: pink;
+    }
 
     &-image {
       width: 100%;
-      height: 360px;
       margin-bottom: 12px;
     }
 
@@ -126,9 +126,6 @@
   }
 
   .suggestion {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    background-color: gray;
+    display: none;
   }
 }
