--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -14,11 +14,14 @@
 .sidebar {
   position: sticky;
   top: 0;
-  padding: 8px;
   width: 100%;
   height: fit-content;
-  background-color: aqua;
+  background-color: #fff;
   border-bottom: 1px solid #ccc;
+
+  &-container {
+    margin: 8px;
+  }
 
   &-logo-instagram {
     width: 103px;
@@ -47,17 +50,22 @@
     display: flex;
     width: 100%;
     overflow-x: hidden;
-    padding: 16px 0 16px 0;
     text-align: center;
     align-items: center;
     background-color: #fafafa;
     border-bottom: 1px solid #ccc;
 
+    &-container {
+      display: flex;
+      width: 100%;
+      margin: 8px;
+      gap: 18px;
+    }
+
     &-item {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-right: 16px;
     }
 
     &-pp {
@@ -76,7 +84,6 @@
 
   .post {
     width: 100%;
-    background-color: aquamarine;
 
     &-container {
       display: flex;
@@ -85,12 +92,10 @@
       margin-bottom: 36px;
       width: 100%;
       max-width: 500px;
-      background-color: pink;
     }
 
     &-image {
       width: 100%;
-      margin-bottom: 12px;
     }
 
     &-pp {
@@ -104,14 +109,19 @@
 
     &-header {
       display: flex;
+    }
+
+    &-header-container {
+      display: flex;
+      width: 100%;
       justify-content: space-between;
+      margin: 12px;
       align-items: center;
     }
 
     &-user {
       display: flex;
       align-items: center;
-      margin-bottom: 14px;
     }
 
     &-action {
@@ -119,13 +129,34 @@
       justify-content: space-between;
     }
 
+    &-action-container {
+      display: flex;
+      width: 100%;
+      margin: 12px;
+      justify-content: space-between;
+      align-items: center;
+    }
+
     &-react {
       display: flex;
-      gap: 8px;
+      gap: 14px;
     }
   }
 
   .suggestion {
     display: none;
+  }
+}
+
+.loading {
+  width: 100%;
+  height: 100vh;
+
+  &-instagram {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
   }
 }
