--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -19,6 +19,7 @@
   height: fit-content;
   background-color: #fff;
   border-bottom: 1px solid #ccc;
+  z-index: 10;
 
   &-container {
     display: flex;
@@ -65,7 +66,6 @@
     align-items: center;
     background-color: #fafafa;
     border-bottom: 1px solid #ccc;
-    z-index: -1;
 
     &-container {
       display: flex;
@@ -78,12 +78,13 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      cursor: pointer;
     }
 
     &-pp {
       width: 56px;
       height: 56px;
-      border-radius: 50%;
+      border-radius: 100%;
       background-color: #ccc;
       object-fit: cover;
     }
@@ -130,6 +131,7 @@
       background-color: #ccc;
       margin-right: 16px;
       object-fit: cover;
+      cursor: pointer;
     }
 
     &-header {
