--- a/src/assets/scss/components.scss
+++ b/src/assets/scss/components.scss
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 100%;
-    border: white 2px solid;
+    border: #fafafa 2px solid;
   }
 }
 
