--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -130,7 +130,7 @@
       width: fit-content;
       height: fit-content;
       padding: 2px;
-      border: #fff 2px solid;
+      border: #fafafa 2px solid;
       bottom: 0;
       right: 0;
       border-radius: 100%;
@@ -187,6 +187,7 @@
 
     &-action-container {
       display: flex;
+      flex-direction: column;
       width: 100%;
       margin: 12px;
       justify-content: space-between;
@@ -195,20 +196,26 @@
 
     &-react {
       display: flex;
+      width: 100%;
+      justify-content: space-between;
+    }
+
+    &-react-button {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
       gap: 14px;
     }
 
     &-like {
       display: flex;
       width: 100%;
+      margin: 20px 0 10px 0;
     }
 
-    &-like-container {
+    &-caption {
       display: flex;
       width: 100%;
-      margin: 0 12px;
-      align-items: center;
-      cursor: pointer;
     }
   }
 
