--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Instagram+Sans&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -50,7 +48,7 @@
 
 .tabnav {
   display: flex;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   width: 100%;
   background-color: #fff;
@@ -73,6 +71,13 @@
 
   &-container li {
     cursor: pointer;
+  }
+
+  &-profile {
+    width: 24px;
+    height: 24px;
+    object-fit: cover;
+    border-radius: 100%;
   }
 }
 
@@ -144,7 +149,7 @@
       display: flex;
       flex-direction: column;
       margin: 0 auto;
-      margin-bottom: 36px;
+      margin-bottom: 16px;
       width: 100%;
       max-width: 500px;
     }
@@ -214,6 +219,18 @@
     }
 
     &-caption {
+      display: flex;
+      width: 100%;
+    }
+
+    &-comment {
+      display: flex;
+      width: 100%;
+      margin: 10px 0;
+      cursor: pointer;
+    }
+
+    &-time {
       display: flex;
       width: 100%;
     }
