--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -253,3 +253,53 @@
     height: 100%;
   }
 }
+
+// Resposive Tablet
+@media screen and (min-width: 480px) {
+  .layout {
+    flex-direction: row;
+  }
+
+  .sidebar {
+    flex-direction: column;
+    width: fit-content;
+    height: 100vh;
+    background-color: aqua;
+
+    &-logo-instagram {
+      display: none;
+    }
+
+    &-action {
+      display: none;
+    }
+
+    & ul {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      justify-content: space-between;
+      padding: 8px 0;
+      list-style: none;
+    }
+
+    & ul li span {
+      display: none;
+    }
+  }
+
+  .tabnav {
+    display: none;
+  }
+
+  .home {
+    .story {
+      justify-content: center;
+      background-color: transparent;
+
+      &-container {
+        max-width: 480px;
+      }
+    }
+  }
+}
