--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -318,7 +318,6 @@
       position: relative;
       flex-direction: column;
       justify-content: space-between;
-      align-items: center;
       width: 100%;
       height: 100%;
       padding: 8px 0;
@@ -478,7 +477,7 @@
       border-radius: 100%;
     }
 
-    &-more {
+    &-more-container {
       display: block;
     }
   }
@@ -578,7 +577,7 @@
   }
 }
 
-// Responsive Large Screen (Laptop)
+// Responsive Large Screen (Laptop, Desktop)
 @media screen and (min-width: 1200px) {
   .sidebar {
     &-container {
@@ -587,6 +586,7 @@
 
     &-logo-instagram {
       display: block;
+      margin: 0 0 0 12px;
     }
 
     &-logo-ig {
@@ -600,6 +600,7 @@
       justify-content: space-between;
       list-style: none;
       gap: 8px;
+      margin: 42px 0 0 0;
     }
 
     & ul li {
@@ -619,6 +620,10 @@
       gap: 12px;
       margin: 0 12px;
       align-items: center;
+    }
+
+    &-more-container span {
+      display: block;
     }
   }
 }
