--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -47,6 +47,7 @@
     display: flex;
     align-items: center;
     gap: 12px;
+    padding-top: 4px;
     width: fit-content;
   }
 
@@ -97,6 +98,12 @@
 
   &-container li {
     cursor: pointer;
+    transition: 0.5s;
+  }
+
+  &-container li:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
   }
 
   &-profile {
@@ -188,7 +195,6 @@
       margin: 0 auto;
       margin-bottom: 16px;
       width: 100%;
-      max-width: 500px;
     }
 
     &-image {
@@ -239,6 +245,7 @@
     &-react {
       display: flex;
       width: 100%;
+      align-items: center;
       justify-content: space-between;
     }
 
@@ -246,7 +253,7 @@
       display: flex;
       align-items: center;
       cursor: pointer;
-      gap: 14px;
+      gap: 20px;
     }
 
     &-like {
@@ -376,7 +383,13 @@
 
     &-more-container {
       display: block;
+      cursor: pointer;
     }
+
+    &-more-container:hover {
+      background-color: #fafafa;
+    }
+
     &-more-container span {
       display: none;
     }
@@ -608,7 +621,7 @@
       justify-content: space-between;
       list-style: none;
       gap: 8px;
-      margin: 42px 0 0 0;
+      margin: 24px 0 0 0;
     }
 
     & ul li {
@@ -626,8 +639,10 @@
     &-more-container {
       display: flex;
       gap: 12px;
-      margin: 0 12px;
       align-items: center;
+      border-radius: 100px;
+      width: 200px;
+      padding: 12px;
     }
 
     &-more-container span {
