--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -411,6 +411,7 @@
       justify-content: center;
       background-color: transparent;
       border-bottom: 0;
+      margin-bottom: 24px;
 
       &-container {
         max-width: 460px;
