--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -342,6 +342,10 @@
       width: 100%;
     }
 
+    &-head-time {
+      display: none;
+    }
+
     &-input {
       display: none;
     }
@@ -523,6 +527,14 @@
         align-items: center;
       }
 
+      &-head-time {
+        display: flex;
+        margin: 0 0 0 10px;
+        font-size: 12px;
+        color: #8e8e8e;
+        width: 100%;
+      }
+
       &-time {
         display: none;
       }
@@ -658,6 +670,15 @@
         margin: 24px 0 20px 0;
         justify-content: space-between;
         align-items: center;
+      }
+
+      &-see-all {
+        font-size: 12px;
+        cursor: pointer;
+      }
+
+      &-see-all:hover {
+        color: #aa9aaa;
       }
 
       &-friend {
