--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -81,10 +81,10 @@
 
   &-icon-notification {
     display: flex;
-    font-size: 10px;
+    font-size: 12px;
     padding: 6px;
-    width: 4px;
-    height: 4px;
+    width: 6px;
+    height: 6px;
     justify-content: center;
     border-radius: 100%;
     color: #fff;
@@ -554,6 +554,15 @@
 
       &-comment-input:focus {
         outline: none;
+      }
+
+      &-comment-emot {
+        color: #8e8e8e;
+        cursor: pointer;
+      }
+
+      &-comment-emot:hover {
+        color: #c7c7c7;
       }
 
       &-comment-action {
