--- a/src/assets/scss/components.scss
+++ b/src/assets/scss/components.scss
@@ -29,3 +29,31 @@
   border-radius: 50%;
   padding: 3px;
 }
+
+.modal {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.192);
+  z-index: 100;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+
+  &-overlay {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+  }
+
+  &-basic {
+    display: flex;
+    position: fixed;
+    background-color: #fff;
+    border-radius: 16px;
+  }
+}
