--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -349,6 +349,25 @@
     &-input {
       display: none;
     }
+
+    &-utility-modal {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &-utility-modal span {
+      margin: 14px 0;
+      font-size: 14px;
+      cursor: pointer;
+      width: 300px;
+      text-align: center;
+    }
+
+    &-utility-modal hr {
+      border: none;
+      height: 2px;
+      background-color: #dbdbdb;
+    }
   }
 
   .suggestion {
@@ -569,6 +588,10 @@
         display: flex;
         align-items: center;
         gap: 8px;
+      }
+
+      &-utility-modal span {
+        width: 400px;
       }
     }
   }
