post utility bug fixed

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -356,16 +356,20 @@
     }
 
     &-utility-modal span {
-      margin: 14px 0;
+      padding: 14px 0;
       font-size: 14px;
       cursor: pointer;
       width: 300px;
       text-align: center;
     }
 
+    &-utility-modal span:active {
+      background-color: #dbdbdb;
+    }
+
     &-utility-modal hr {
       border: none;
-      height: 2px;
+      height: 1px;
       background-color: #dbdbdb;
     }
   }
