--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -523,6 +523,7 @@
         margin-bottom: 16px;
         width: 100%;
         max-width: 460px;
+        padding-bottom: 5px;
         border-bottom: 1px solid #dbdbdb;
       }
 
