--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -44,6 +44,11 @@
     font-size: 16px;
   }
 
+  &-link {
+    color: black;
+    text-decoration: none;
+  }
+
   &-action {
     display: flex;
     align-items: center;
