--- a/src/assets/scss/components.scss
+++ b/src/assets/scss/components.scss
@@ -57,3 +57,55 @@
     border-radius: 16px;
   }
 }
+
+.button-primary {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0095f6;
+  border-radius: 10px;
+  padding: 8px 16px;
+  cursor: pointer;
+  border: none;
+  color: white;
+
+  &:hover {
+    background-color: #1877f2;
+  }
+}
+
+.create-modal {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+  min-width: 400px;
+  text-align: center;
+
+  &-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    border-bottom: 1px solid #e0e0e0;
+  }
+
+  &-title span {
+    font-weight: bold;
+  }
+
+  &-container {
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+  }
+
+  &-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50% auto;
+    padding: 16px;
+  }
+}
